# dphand-teleop

./: .gitignore  LICENSE  MUJOCO_LOG.TXT  README.md  dphand_retargeting.py  dphand_teleoperator.py  pyproject.toml  setup.py  test_teleop_env.py  visionpro_listener.py  visualize_dphand.py  visualize_franka.py  visualize_franka_dphand_teleop.py  visualize_inspire_hand.py  visualize_mojoco.py  visualize_mojoco_angle.py  visualize_mojoco_joint_to_joint.py
assets/: dphand_franka_arena.xml  panda_dphand.xml  panda_pick_and_place.xml
assets/DPhand/: DPHand_free.xml  DPhand.urdf  dphand_arena.xml  dphand_grasp.xml
assets/DPhand/meshes/: PD-v5-1.stl  cardan-v4-4.stl  forearm-v1.stl  point-v1.stl  wrist-v3.stl
assets/DPhand/stl/: PM-v4-2.stl
assets/dphand/: DPHand.xml  DPHand_free.xml  dphand_grasp.xml
assets/dphand/stl/: PP-v4.stl  palm-v7.stl
assets/franka_emika_panda/: panda.xml  scene.xml
assets/inspire_hand/: left_hand.xml  scene_left.xml
data/: hand_keypoints.npz  hand_keypoints_renamed.npz  process_data.py  test_data_v1.npz  test_data_v2.npz  test_recording.npz
dphand_teleop/: dphand_retargeting.py  dphand_retargeting_j2j.py  dphand_retargeting_p2p.py  dphand_teleoperator.py  franka_retargeting.py  inspire_retargeting.py  retarget.py  teleoperator.py  visionpro_listener.py
dphand_utils/: __init__.py  filter_utils.py  math_utils.py  model_utils.py
dphandteleop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
envs/: dphand_env.py
franka_controller/: opspace.py
utils/: math_utils.py  model_utils.py
