[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dphandteleop"
version = "0.1.0"
description = "Teleoperation for DPhand"
readme = "README.md"
authors = [
  {name = "Yu Hexi", email = "your.email@example.com"},
]
maintainers = [
  {name = "Yu Hexi", email = "your.email@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["teleoperation", "robotics", "mujoco"]
requires-python = ">=3.8"
dependencies = [
    "avp_stream==1.0",
    "gymnasium==1.1.1",
    "mujoco>=3.2.3",
    "numpy>=1.23.5",
    "scipy>=1.10.1",
]

[project.urls]
Homepage = "https://github.com/your_username/dphand-teleop"
"Bug Tracker" = "https://github.com/your_username/dphand-teleop/issues"

[tool.setuptools]
packages = ["dphand_teleop", "dphand_utils", "franka_controller"]